# back-end-fs-internship-10-Meduzzen

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  main.py
app/db/: __init__.py  db.py  redis.py  test.data.json
app/routers/: __init__.py  base_router.py  db_redis_test_router.py
tests/: Dockerfile  run_test.sh  test_main.py
