[project]
name = "back-end-fs-internship-10-meduzzen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.0",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
