[project]
name = "back-end-fs-internship-10-meduzzen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.8",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "uvicorn>=0.34.0", 
]
[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
